feat: Add reminder functionality and widget support
- Added permissions for scheduling alarms and posting notifications in AndroidManifest.xml.
- Implemented ReminderReceiver to handle alarm triggers and show notifications.
- Created ReminderHelper class to manage scheduling and canceling reminders.
- Updated Todo model to include reminder time and status.
- Enhanced TodoViewModel to support reminder scheduling and widget updates.
- Developed TodoWidget and TodoWidgetService to display active todos in a widget.
- Added layouts for small, medium, and large widget sizes.
- Implemented reminder dialog in TodoFormFragment for setting reminders.
- Updated menu options to include reminder actions.
- Added string resources for better localization.
- Created XML for widget configuration.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Todoo</string>
+    <string name="action_reminder">Reminder</string>
+    <string name="action_hide">Hide</string>
+    <string name="action_home_screen">Place on Home Screen</string>
+    <string name="action_move">Move To</string>
+    <string name="action_delete">Delete</string>
 </resources>
